--- a/latex/slides.tex
+++ b/latex/slides.tex
@@ -1,4 +1,4 @@
-% Time-stamp: <2020-09-14 18:29:53 Romain>
+% Time-stamp: <2020-09-15 12:59:16 Romain>
 % Beamer template for the Macro Stress-Testing Article
 % August 2020
 % Contact: Romain Lafarguette, rlafarguette@imf.org
@@ -97,7 +97,6 @@ A Risk-Based Framework}
     \subfloat{{\includegraphics[width=2cm]{imf_logo}}}%
     \end{figure}
 }
-
 
 % Insert the plan at each beginning of the section
 \AtBeginSection[]
@@ -199,16 +198,20 @@ We propose an FX intervention rule based on \textbf{Conditional Value-at-Risk}
 \begin{frame}
     \frametitle{Main Features}
   \begin{largeenumerate}
-  \item This rule allows flexible exchange rate to act as a \textbf{shock absorber}:
-    provides more flexibility in crisis time.
-  \item No excessive interventions in crisis time which are often ineffective
+  \item Allows flexible exchange rate to act as a \textbf{shock absorber}:
+    more flexibility in crisis time => \textbf{avoid overshooting}
+  \item \textbf{No excessive interventions} in crisis time, which are often ineffective
     and costly (exhaust central bank FX reserves)
-  \item Doesn't provide a free insurance to the market: avoid \textbf{moral
+  \item No free insurance to the market: avoid \textbf{moral
       hazard} and foster the \textbf{development of hedging market}
-  \item Adaptative rule prevent \textbf{market manipulation and windfall effects}
-  \item This rule guarantees that the interventions will occur with a \textbf{fixed
-        frequency} over the medium term => \textbf{budget neutrality} with
-      symmetric risk preference
+  \item Prevent \textbf{market speculation and windfall effects}
+  \item Guarantees \textbf{fixed-frequency} interventions: 
+    \begin{itemize}
+    \item \textbf{Certainty} about interventions: the central bank can intervene with
+      \textbf{larger amounts}, more efficiently
+    \item \textbf{Budget neutrality} with symmetric risk preference
+    \end{itemize}
+
   \item \textbf{Financially optimized}: always buy/sell at the best price
   \end{largeenumerate}  
 \end{frame}
