Updated output and data

--- a/latex/slides.tex
+++ b/latex/slides.tex
@@ -1,4 +1,4 @@
-% Time-stamp: <2020-09-15 18:04:11 Romain>
+% Time-stamp: <2020-09-23 21:29:05 RLafarguette>
 % Beamer template for the Macro Stress-Testing Article
 % August 2020
 % Contact: Romain Lafarguette, rlafarguette@imf.org
@@ -8,9 +8,6 @@
 %% ---------------------------------------------------------------------------
 % Class 
 \documentclass{beamer}
-
-% Language
-\usepackage[english]{babel}
 
 % Font and encoding
 \usepackage[utf8]{inputenc} % Input font
@@ -46,9 +43,6 @@
 
 % Appendix slides
 \usepackage{appendixnumberbeamer} % Manage page numbers for appendix slides
-
-% Bibliographies
-\usepackage{natbib} % Author-year bibliography style
 
 % A few macros: environments
 \newenvironment{largeitemize}{\itemize\addtolength{\itemsep}{10pt}}{\enditemize}
