--- a/output/regressions_table.tex
+++ b/output/regressions_table.tex
@@ -1,26 +1,27 @@
-\begin{tabular}{lllllll}
+\begin{tabular}{llllll}
 \toprule
-{} &      Constant & Microstructure &            CIP &            FXI &        Baseline &     Robustness \\
+{} &  Microstructure &            CIP &    Dollar move &  Risk Appetite &       Baseline \\
 \midrule
-Intercept                       &    1.09(0.16) &    -2.16(0.16) &      2.15(0.3) &   1.67***(0.0) &      1.63(0.45) &   1.64***(0.0) \\
-Lag FX log returns              &  0.09***(0.0) &   0.08***(0.0) &   0.08***(0.0) &   0.08***(0.0) &    0.08***(0.0) &   0.08***(0.0) \\
-Bid-ask spread abs value        &               &   0.11**(0.01) &   0.15***(0.0) &   0.14***(0.0) &    0.15***(0.0) &   0.15***(0.0) \\
-Forward points first difference &               &   0.32***(0.0) &   0.32***(0.0) &   0.32***(0.0) &    0.27***(0.0) &   0.27***(0.0) \\
-Interbank rate vs Libor         &               &                &  -1.11***(0.0) &  -0.98***(0.0) &  -1.02***(0.01) &  -1.03***(0.0) \\
-FX intervention in USD lag      &               &                &                &     0.04(0.14) &      0.04(0.14) &                \\
-VIX first diff                  &               &                &                &                &    9.78***(0.0) &   9.79***(0.0) \\
-EURUSD log returns              &               &                &                &                &    0.13***(0.0) &   0.13***(0.0) \\
-FX intervention dummy lag       &               &                &                &                &                 &     4.13(0.22) \\
-Omega                           &  0.15***(0.0) &   0.14***(0.0) &  0.13***(0.01) &  0.13***(0.01) &   0.14***(0.01) &  0.14***(0.01) \\
-Alpha                           &  0.17***(0.0) &   0.19***(0.0) &   0.18***(0.0) &   0.18***(0.0) &    0.19***(0.0) &   0.19***(0.0) \\
-Gamma                           &  0.06***(0.0) &   0.06***(0.0) &   0.06***(0.0) &   0.05***(0.0) &    0.05***(0.0) &   0.05***(0.0) \\
-Beta                            &  0.98***(0.0) &   0.98***(0.0) &   0.98***(0.0) &   0.99***(0.0) &    0.98***(0.0) &   0.98***(0.0) \\
-Nu                              &  8.81***(0.0) &   9.11***(0.0) &   9.18***(0.0) &   9.15***(0.0) &    7.77***(0.0) &   7.77***(0.0) \\
-Lambda                          &  0.13***(0.0) &   0.11***(0.0) &   0.12***(0.0) &   0.12***(0.0) &     0.1***(0.0) &    0.1***(0.0) \\
-R2                              &         0.4 \% &          4.9 \% &          5.1 \% &          5.1 \% &          14.3 \% &         14.3 \% \\
-R2 adjusted                     &         0.4 \% &          4.8 \% &          5.0 \% &          5.0 \% &          14.2 \% &         14.1 \% \\
-Number of observations          &          4511 &           4511 &           4511 &           4510 &            4510 &           4510 \\
-Pvalue in parenthesis           &               &                &                &                &                 &                \\
-Significance *10\%, **5\%, ***1\%  &               &                &                &                &                 &                \\
+Intercept                       &  -2.33***(0.01) &    -2.29(0.94) &    -1.84(0.63) &    -2.55(0.13) &   -1.63*(0.09) \\
+Lag FX log returns              &   -0.07***(0.0) &    -0.08(0.66) &  -0.08***(0.0) &  -0.08***(0.0) &  -0.08***(0.0) \\
+Bid-ask spread abs value        &      5.71(0.18) &    24.39(0.96) &   -35.66(0.73) &    -2.42(0.96) &      3.23(0.8) \\
+Min-max spread abs value        &   35.56***(0.0) &    34.63(0.93) &    34.32(0.52) &   34.55*(0.09) &   26.2**(0.03) \\
+Forward points first difference &   23.29***(0.0) &  17.79***(0.0) &  26.44***(0.0) &   19.8***(0.0) &  19.44***(0.0) \\
+Interbank rate vs Libor         &                 &  33.61***(0.0) &  39.32***(0.0) &  34.75***(0.0) &  33.86***(0.0) \\
+EURUSD log returns              &                 &                &  -0.14***(0.0) &  -0.17***(0.0) &  -0.16***(0.0) \\
+VIX first diff                  &                 &                &                &  15.66***(0.0) &  15.37***(0.0) \\
+FX intervention dummy lag       &                 &                &                &                &     2.23(0.62) \\
+Oil prices log returns          &                 &                &                &                &  -0.02***(0.0) \\
+Omega                           &    0.13***(0.0) &     0.13(0.54) &  0.12***(0.01) &   0.11***(0.0) &   0.12***(0.0) \\
+Alpha                           &    0.17***(0.0) &    0.17*(0.08) &   0.16***(0.0) &   0.16***(0.0) &   0.15***(0.0) \\
+Gamma                           &    0.07***(0.0) &   0.06***(0.0) &   0.06***(0.0) &   0.05***(0.0) &   0.05***(0.0) \\
+Beta                            &    0.98***(0.0) &   0.99***(0.0) &   0.99***(0.0) &   0.99***(0.0) &   0.99***(0.0) \\
+Nu                              &    8.33***(0.0) &   8.66***(0.0) &   8.92***(0.0) &   8.71***(0.0) &   8.54***(0.0) \\
+Lambda                          &    0.08***(0.0) &     0.07(0.89) &     0.09(0.16) &    0.07*(0.06) &   0.08***(0.0) \\
+R2                              &           5.8 \% &          6.7 \% &         10.4 \% &         27.3 \% &         27.6 \% \\
+R2 adjusted                     &           5.8 \% &          6.6 \% &         10.4 \% &         27.2 \% &         27.5 \% \\
+Number of observations          &            5986 &           5986 &           5682 &           5682 &           5680 \\
+Pvalue in parenthesis           &                 &                &                &                &                \\
+Significance *10\%, **5\%, ***1\%  &                 &                &                &                &                \\
 \bottomrule
 \end{tabular}
