--- a/output/regressions_table_short.tex
+++ b/output/regressions_table_short.tex
@@ -1,25 +1,26 @@
-\begin{tabular}{lllllll}
+\begin{tabular}{llllll}
 \toprule
-{} & Constant & Microstructure &       CIP &       FXI &  Baseline & Robustness \\
+{} & Microstructure &       CIP & Dollar move & Risk Appetite &  Baseline \\
 \midrule
-Intercept                       &     1.09 &          -2.16 &      2.15 &   1.67*** &      1.63 &    1.64*** \\
-Lag FX log returns              &  0.09*** &        0.08*** &   0.08*** &   0.08*** &   0.08*** &    0.08*** \\
-Bid-ask spread abs value        &          &         0.11** &   0.15*** &   0.14*** &   0.15*** &    0.15*** \\
-Forward points first difference &          &        0.32*** &   0.32*** &   0.32*** &   0.27*** &    0.27*** \\
-Interbank rate vs Libor         &          &                &  -1.11*** &  -0.98*** &  -1.02*** &   -1.03*** \\
-FX intervention in USD lag      &          &                &           &      0.04 &      0.04 &            \\
-VIX first diff                  &          &                &           &           &   9.78*** &    9.79*** \\
-EURUSD log returns              &          &                &           &           &   0.13*** &    0.13*** \\
-FX intervention dummy lag       &          &                &           &           &           &       4.13 \\
-Omega                           &  0.15*** &        0.14*** &   0.13*** &   0.13*** &   0.14*** &    0.14*** \\
-Alpha                           &  0.17*** &        0.19*** &   0.18*** &   0.18*** &   0.19*** &    0.19*** \\
-Gamma                           &  0.06*** &        0.06*** &   0.06*** &   0.05*** &   0.05*** &    0.05*** \\
-Beta                            &  0.98*** &        0.98*** &   0.98*** &   0.99*** &   0.98*** &    0.98*** \\
-Nu                              &  8.81*** &        9.11*** &   9.18*** &   9.15*** &   7.77*** &    7.77*** \\
-Lambda                          &  0.13*** &        0.11*** &   0.12*** &   0.12*** &    0.1*** &     0.1*** \\
-R2                              &    0.4 \% &          4.9 \% &     5.1 \% &     5.1 \% &    14.3 \% &     14.3 \% \\
-R2 adjusted                     &    0.4 \% &          4.8 \% &     5.0 \% &     5.0 \% &    14.2 \% &     14.1 \% \\
-Number of observations          &     4511 &           4511 &      4511 &      4510 &      4510 &       4510 \\
-Significance *10\%, **5\%, ***1\%  &          &                &           &           &           &            \\
+Intercept                       &       -2.33*** &     -2.29 &       -1.84 &         -2.55 &    -1.63* \\
+Lag FX log returns              &       -0.07*** &     -0.08 &    -0.08*** &      -0.08*** &  -0.08*** \\
+Bid-ask spread abs value        &           5.71 &     24.39 &      -35.66 &         -2.42 &      3.23 \\
+Min-max spread abs value        &       35.56*** &     34.63 &       34.32 &        34.55* &    26.2** \\
+Forward points first difference &       23.29*** &  17.79*** &    26.44*** &       19.8*** &  19.44*** \\
+Interbank rate vs Libor         &                &  33.61*** &    39.32*** &      34.75*** &  33.86*** \\
+EURUSD log returns              &                &           &    -0.14*** &      -0.17*** &  -0.16*** \\
+VIX first diff                  &                &           &             &      15.66*** &  15.37*** \\
+FX intervention dummy lag       &                &           &             &               &      2.23 \\
+Oil prices log returns          &                &           &             &               &  -0.02*** \\
+Omega                           &        0.13*** &      0.13 &     0.12*** &       0.11*** &   0.12*** \\
+Alpha                           &        0.17*** &     0.17* &     0.16*** &       0.16*** &   0.15*** \\
+Gamma                           &        0.07*** &   0.06*** &     0.06*** &       0.05*** &   0.05*** \\
+Beta                            &        0.98*** &   0.99*** &     0.99*** &       0.99*** &   0.99*** \\
+Nu                              &        8.33*** &   8.66*** &     8.92*** &       8.71*** &   8.54*** \\
+Lambda                          &        0.08*** &      0.07 &        0.09 &         0.07* &   0.08*** \\
+R2                              &          5.8 \% &     6.7 \% &      10.4 \% &        27.3 \% &    27.6 \% \\
+R2 adjusted                     &          5.8 \% &     6.6 \% &      10.4 \% &        27.2 \% &    27.5 \% \\
+Number of observations          &           5986 &      5986 &        5682 &          5682 &      5680 \\
+Significance *10\%, **5\%, ***1\%  &                &           &             &               &           \\
 \bottomrule
 \end{tabular}
