--- a/output/regressions_table_short.tex
+++ b/output/regressions_table_short.tex
@@ -2,10 +2,10 @@
 \toprule
 {} & Microstructure &       CIP & Dollar move & Risk Appetite &  Baseline \\
 \midrule
-Intercept                       &       -2.33*** &     -2.29 &       -1.84 &         -2.55 &    -1.63* \\
+Intercept                       &       -2.33*** &     -2.29 &       -1.84 &         -2.55 &     -1.63 \\
 Lag FX log returns              &       -0.07*** &     -0.08 &    -0.08*** &      -0.08*** &  -0.08*** \\
-Bid-ask spread abs value        &           5.71 &     24.39 &      -35.66 &         -2.42 &      3.23 \\
-Min-max spread abs value        &       35.56*** &     34.63 &       34.32 &        34.55* &    26.2** \\
+Bid ask spread abs value        &           5.71 &     24.39 &      -35.66 &         -2.42 &      3.23 \\
+Min max spread abs value        &       35.56*** &     34.63 &       34.32 &        34.55* &     26.21 \\
 Forward points first difference &       23.29*** &  17.79*** &    26.44*** &       19.8*** &  19.44*** \\
 Interbank rate vs Libor         &                &  33.61*** &    39.32*** &      34.75*** &  33.86*** \\
 EURUSD log returns              &                &           &    -0.14*** &      -0.17*** &  -0.16*** \\
