--- a/output/regressions_table.tex
+++ b/output/regressions_table.tex
@@ -4,8 +4,8 @@
 \midrule
 Intercept                       &  -2.33***(0.01) &    -2.29(0.94) &    -1.84(0.63) &    -2.55(0.13) &    -1.63(0.28) \\
 Lag FX log returns              &   -0.07***(0.0) &    -0.08(0.66) &  -0.08***(0.0) &  -0.08***(0.0) &  -0.08***(0.0) \\
-Bid ask spread abs value        &      5.71(0.18) &    24.39(0.96) &   -35.66(0.73) &    -2.42(0.96) &     3.23(0.84) \\
-Min max spread abs value        &   35.56***(0.0) &    34.63(0.93) &    34.32(0.52) &   34.55*(0.09) &    26.21(0.15) \\
+Bid ask abs                     &      5.71(0.18) &    24.39(0.96) &   -35.66(0.73) &    -2.42(0.96) &     3.23(0.84) \\
+Min max abs                     &   35.56***(0.0) &    34.63(0.93) &    34.32(0.52) &   34.55*(0.09) &    26.21(0.15) \\
 Forward points first difference &   23.29***(0.0) &  17.79***(0.0) &  26.44***(0.0) &   19.8***(0.0) &  19.44***(0.0) \\
 Interbank rate vs Libor         &                 &  33.61***(0.0) &  39.32***(0.0) &  34.75***(0.0) &  33.86***(0.0) \\
 EURUSD log returns              &                 &                &  -0.14***(0.0) &  -0.17***(0.0) &  -0.16***(0.0) \\
