Rearrange the benchmarking exercise

--- a/latex/slides.tex
+++ b/latex/slides.tex
@@ -1,4 +1,4 @@
-% Time-stamp: <2020-09-23 21:29:05 RLafarguette>
+% Time-stamp: <2020-11-06 15:03:05 Romain>
 % Beamer template for the Macro Stress-Testing Article
 % August 2020
 % Contact: Romain Lafarguette, rlafarguette@imf.org
@@ -81,7 +81,7 @@ A Risk-Based Framework}
 \author[]{Romain Lafarguette \and Romain Veyrune}
 \institute[]{IMF Monetary and Capital Markets Department \\ Central Bank Operations Division}
 
-\date[]{\scriptsize September 2020 \\ \vspace{0.5cm} \scriptsize{\textit{The views
+\date[]{\scriptsize November 2020 \\ \vspace{0.5cm} \scriptsize{\textit{The views
       expressed in this presentation do not necessarily represent the views of
       the IMF, its Executive Board, or IMF management} \vspace{-0.5cm}}}
 
