Alignment with the new November version incorporating reviewers comments

--- a/latex/slides.tex
+++ b/latex/slides.tex
@@ -1,4 +1,4 @@
-% Time-stamp: <2020-11-06 15:03:05 Romain>
+% Time-stamp: <2020-11-06 17:54:14 Romain>
 % Beamer template for the Macro Stress-Testing Article
 % August 2020
 % Contact: Romain Lafarguette, rlafarguette@imf.org
@@ -529,6 +529,14 @@ g(r_t)$ where $g(r_t) = \alpha_v r_t + \gamma(|r_t|-\mathbb{E}|r_t|)$
   \end{largeenumerate}
 \end{frame}
 
+
+
+\begin{frame}{Alternative Models: Benchmarking}
+\setlength\tabcolsep{2pt}  % default value: 6pt
+\tiny  %%  command to change the font size
+\input{../output/benchmark_table.tex}
+\normalsize
+\end{frame}
 
 
 
