Editing at paper stage

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -179,7 +179,7 @@
 @article{hansen2005,
   title={A forecast comparison of volatility models: does anything beat a GARCH (1, 1)?},
   author={Hansen, Peter R and Lunde, Asger},
-  journal={Journal of applied econometrics},
+  journal={Journal of Applied Econometrics},
   volume={20},
   number={7},
   pages={873--889},
@@ -228,7 +228,7 @@
 }
 
 @article{kuersteiner2018,
-  title={Effective sterilized foreign exchange intervention? Evidence from a rule-based policy},
+  title={Effective sterilized foreign exchange intervention? {Evidence} from a rule-based policy},
   author={Kuersteiner, Guido and Phillips, David and Villamizar-Villegas, Mauricio},
   journal={Journal of International Economics},
   volume={113},
