--- a/output/regressions_table_short.tex
+++ b/output/regressions_table_short.tex
@@ -2,24 +2,24 @@
 \toprule
 {} & Microstructure &       CIP & Dollar move & Risk Appetite &  Baseline \\
 \midrule
-Intercept                       &       -2.33*** &     -2.29 &       -1.84 &         -2.55 &     -1.63 \\
-Lag FX log returns              &       -0.07*** &     -0.08 &    -0.08*** &      -0.08*** &  -0.08*** \\
-Bid ask abs                     &           5.71 &     24.39 &      -35.66 &         -2.42 &      3.23 \\
-Min max abs                     &       35.56*** &     34.63 &       34.32 &        34.55* &     26.21 \\
-Forward points first difference &       23.29*** &  17.79*** &    26.44*** &       19.8*** &  19.44*** \\
-Interbank rate vs Libor         &                &  33.61*** &    39.32*** &      34.75*** &  33.86*** \\
+Intercept                       &          -2.34 &     -2.29 &       -1.74 &         -2.55 &     -1.63 \\
+Lag FX log returns              &       -0.07*** &  -0.08*** &    -0.08*** &      -0.08*** &  -0.08*** \\
+Bid ask abs                     &           5.67 &     24.45 &      -33.58 &         -2.68 &      3.22 \\
+Min max abs                     &          35.62 &     34.68 &       33.32 &        34.45* &      26.2 \\
+Forward points first difference &       23.29*** &  17.79*** &    26.33*** &      19.82*** &  19.44*** \\
+Interbank rate vs Libor         &                &  33.61*** &    39.43*** &      34.75*** &  33.86*** \\
 EURUSD log returns              &                &           &    -0.14*** &      -0.17*** &  -0.16*** \\
-VIX first diff                  &                &           &             &      15.66*** &  15.37*** \\
+VIX first diff                  &                &           &             &      15.67*** &  15.37*** \\
 FX intervention dummy lag       &                &           &             &               &      2.23 \\
 Oil prices log returns          &                &           &             &               &  -0.02*** \\
-Omega                           &        0.13*** &      0.13 &     0.12*** &       0.11*** &   0.12*** \\
-Alpha                           &        0.17*** &     0.17* &     0.16*** &       0.16*** &   0.15*** \\
+Omega                           &        0.13*** &   0.13*** &     0.12*** &       0.11*** &   0.12*** \\
+Alpha                           &        0.17*** &   0.17*** &     0.16*** &       0.16*** &   0.15*** \\
 Gamma                           &        0.07*** &   0.06*** &     0.06*** &       0.05*** &   0.05*** \\
 Beta                            &        0.98*** &   0.99*** &     0.99*** &       0.99*** &   0.99*** \\
-Nu                              &        8.33*** &   8.66*** &     8.92*** &       8.71*** &   8.54*** \\
-Lambda                          &        0.08*** &      0.07 &        0.09 &         0.07* &   0.08*** \\
+Nu                              &        8.33*** &   8.67*** &     8.92*** &       8.71*** &   8.54*** \\
+Lambda                          &          0.08* &      0.07 &       0.09* &         0.07* &   0.08*** \\
 R2                              &          5.8 \% &     6.7 \% &      10.4 \% &        27.3 \% &    27.6 \% \\
-R2 adjusted                     &          5.8 \% &     6.6 \% &      10.4 \% &        27.2 \% &    27.5 \% \\
+R2 adjusted                     &          5.8 \% &     6.6 \% &      10.3 \% &        27.2 \% &    27.5 \% \\
 Number of observations          &           5986 &      5986 &        5682 &          5682 &      5680 \\
 Significance *10\%, **5\%, ***1\%  &                &           &             &               &           \\
 \bottomrule
