Clean version of the LateX file for submission to the JIE

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -40,7 +40,14 @@
   title={A conceptual model for the integrated policy framework},
   author={Basu, Suman Sambha and Boz, Emine and Gopinath, Gita and Roch, Francisco and Unsal, Filiz},
   year={2020},
-  publisher={IMF Working Paper}
+  journal={IMF Working Paper}
+}
+
+@article{borio2016,
+  title={Bye-bye covered interest parity},
+  author={Borio, C and McCauley, R and McGuire, P and Sushko, V},
+  journal={Vox CEPR's Policy Portal},
+  year={2016}
 }
 
 @article{bredin2004,
@@ -70,6 +77,13 @@
   number={2},
   pages={127--70},
   year={2019}
+}
+
+@techreport{cerutti2019,
+  title={Covered interest parity deviations: Macrofinancial determinants},
+  author={Cerutti, Eugenio M and Obstfeld, Maurice and Zhou, Haonan},
+  year={2019},
+  institution={National Bureau of Economic Research}
 }
 
 @book{chamon2019,
@@ -105,7 +119,7 @@
   title={Foreign exchange intervention: strategies and effectiveness},
   author={Chutasripanich, Nuttathum and Yetman, James},
   year={2015},
-  publisher={BIS Working Paper}
+  journal={BIS Working Paper}
 }
 
 @article{diks2011,
@@ -121,12 +135,31 @@
 
 @article{diebold1998,
   title={Evaluating density forecasts, with applications to financial risk management},
-  author={Diebold, F.X., Gunther, T. and Tay, A},
+  author={Diebold, FX and Gunther, T and Tay, A},
   journal={International Economic Review},
   volume={39},
   number={1},
   pages={863--883},
   year={1998},
+}
+
+
+@article{du2018,
+  title={Deviations from covered interest rate parity},
+  author={Du, Wenxin and Tepper, Alexander and Verdelhan, Adrien},
+  journal={The Journal of Finance},
+  volume={73},
+  number={3},
+  pages={915--957},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{eguren2018,
+  title={Global banks and synthetic funding: the benefits of foreign relatives},
+  author={Eguren Martin, Fernando and Ossandon Busch, Matias and Reinhardt, Dennis},
+  year={2018},
+  journal={Bank of England Working Paper}
 }
 
 @article{engle2001,
@@ -143,6 +176,7 @@
   title={A theory of foreign exchange interventions},
   author={Fanelli, Sebastian and Straub, Ludwig},
   journal={NBER Working Paper},
+  volume={1},
   number={w27872},
   year={2020}
 }
@@ -151,7 +185,15 @@
   title={Rules versus discretion in foreign exchange intervention: evidence from official Bank of Canada high-frequency data},
   author={Fatum, Rasmus and King, Michael R},
   year={2005},
-  publisher={SCCIE Working Paper}
+  journal={SCCIE Working Paper}
+}
+
+
+@book{friedman1953,
+  title={The case for Flexible Exchange Rate in Essays in positive economics},
+  author={Friedman, Milton and Friedman, Marilyn},
+  year={1953},
+  publisher={University of Chicago press}
 }
 
 @article{gaglianone2011,
@@ -197,6 +239,25 @@
   year={2010},
   publisher={Elsevier}
 }
+
+
+@article{imf2020,
+  title={Toward an Integrated Policy Framework},
+  author={{International Monetary Fund}},
+  year={2020},
+  journal={International Monetary Fund Working Paper},
+  volume={2020/046},
+}
+
+
+@article{imf2020cbt,
+  title={The Central Bank Transparency Code},
+  author={{International Monetary Fund}},
+  year={2020},
+  journal={International Monetary Fund Policy Paper},
+  volume={2020/038},
+}
+
 
 @article{jeon2002,
   title={Foreign exchange market efficiency, cointegration, and policy coordination},
@@ -248,6 +309,15 @@
   publisher={The University of Chicago Press}
 }
 
+@incollection{mckinnon2000,
+  title={Limiting moral hazard and reducing risk in international capital flows: the choice of an exchange rate regime},
+  author={McKinnon, Ronald I},
+  booktitle={Global Financial Crises},
+  pages={159--176},
+  year={2000},
+  publisher={Springer}
+}
+
 @article{mcmillan2012,
   title={Daily FX volatility forecasts: Can the GARCH (1, 1) model be beaten using high-frequency data?},
   author={Mcmillan, David and Speight, Alan},
@@ -273,7 +343,7 @@
   author={Patel, Nikhil and Cavallino, Paolo},
   journal={BIS Paper},
   number={104b},
-  number={1},
+  volume={1},
   year={2019}
 }
 
@@ -281,7 +351,7 @@
   title={Modelling time-varying exchange rate dependence using the conditional copula},
   author={Patton, Andrew},
   year={2001},
-  publisher={UCSD Discussion Paper}
+  journal={UCSD Discussion Paper}
 }
 
 @article{rossi2019,
@@ -293,6 +363,14 @@
   pages={638--657},
   year={2019},
   publisher={Elsevier}
+}
+
+
+@article{sandri2020,
+  title={FX  intervention  to  stabilize  or  manipulate  the  exchange  rate? Inference from profitability},
+  author={Sandri, Damiano},
+  year={2020},
+  journal={CEPR Discussion Paper No. DP14897}
 }
 
 @book{sarno2003,
@@ -309,6 +387,18 @@
     note = {Python package version 4.15},
     url = {https://bashtage.github.io/arch/},
   }
+
+
+@article{stiglitz1993,
+  title={The role of the state in financial markets},
+  author={Stiglitz, Joseph E},
+  journal={The World Bank Economic Review},
+  volume={7},
+  number={suppl\_1},
+  pages={19--52},
+  year={1993},
+  publisher={Oxford University Press}
+}
 
 @techreport{taylor2017,
   title={Rules versus discretion: assessing the debate over the conduct of monetary policy},
